<?xml version="1.0" encoding="utf-8"?>


<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iespino.registrodatos.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorBackgound"


    >
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBlanco">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_margin_top"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_marginTop="@dimen/dimen_margin_top"
                android:id="@+id/editNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtnombre"
                android:textStyle="bold"

                />
        </android.support.design.widget.TextInputLayout>

        <DatePicker
            android:id="@+id/dpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:scrollX="20dp"
            android:calendarViewShown="false"
            android:layout_marginLeft="@dimen/dimen_datap"


            >
        </DatePicker>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                android:id="@+id/edittelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txttelefono"
                android:textStyle="bold"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                android:id="@+id/editemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtemail"
                android:textStyle="bold"
                />
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                android:id="@+id/editdescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtdescripcion"
                android:textStyle="bold"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnsiguiente"
            android:layout_marginTop="@dimen/dimenlinearActv_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtBsiguiente"
            android:textStyle="bold"
            android:theme="@style/BotonSiguiente"
        />


    </LinearLayout>

</ScrollView>

</FrameLayout>